# CRA-Compliance-Check

./: README.md  pyproject.toml
cra_check/: cli.py  context.py  engine.py  report.py
cra_check/checks/: __init__.py  base.py  data_minimization.py  default_secure_config.py  known_vulnerabilities.py  sbom_completeness.py  sbom_presence.py  secure_update_mechanism.py  security_logging.py  support_eol_docs.py  vuln_disclosure_policy.py
cra_check/renderers/: json_export.py  terminal.py
tests/: test_cli.py  test_context.py  test_engine.py  test_report.py
tests/checks/: test_base.py  test_data_minimization.py  test_default_secure_config.py  test_known_vulnerabilities.py  test_registry.py  test_sbom_completeness.py  test_sbom_presence.py  test_secure_update_mechanism.py  test_security_logging.py  test_support_eol_docs.py  test_vuln_disclosure_policy.py
tests/renderers/: test_json_export.py  test_terminal.py
